--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -49,3 +49,6 @@ content:
 - The largest element
 - Collatz conjecture
 - Balance checker
+- Distance
+- Celsius to Fahrenheit
+- Difference between two doubles
